--- a/settings.cfg
+++ b/settings.cfg
@@ -1,3 +1,5 @@
 version = Auto
 encoding_mode = Auto
-error correction level = High
+error correction level = Medium
+export image = True
+export ascii = False
